# 2023-2024-project-3-virtual-processor-team-2

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: actions_dev.yml
documents/QA/: meetings_reports.md  test_cases.md  test_plan.md  test_report.md  test_reports.md
documents/functional/: AT2-Assembly-Language-Documentation.md  Functional Specification Document Template.md  Functional Specification Document v1.1.md  Functional Specification Document.md  functional_specification_documentation.md  user_manual.md
documents/images/technical_images/: architecture_diagram
documents/management/: management_artifact.md  sow.md
documents/management/weekly_report/: cumulative.md  week_1.md  week_2.md  week_3.md  week_4.md  week_5.md  week_6.md  week_7.md  week_8.md
documents/management/weekly_reports/: cumulative.md  week_2.md  week_3.md  week_4.md  week_5.md  week_6.md  week_7.md  week_8.md
documents/qa/: code_documentation.md  meetings_reports.md  test_cases.md  test_plan.md  test_reports.md
documents/technical/: Technical Specifications project 3 vCPU.md  architectureDiagram.md  data_structure_diagram.md  roadmap.md  state_diagram_parser_C.md  technical.md
src/: 2at2.c  ast.c  ast.h  binExporter.c  binExporter.h  builder.c  builder.h  debug.c  debug.h  error.c  error.h  iat2.c  iat2.h  parser.c  parser.h  runner.c  runner.h  stringPlus.c  stringPlus.h  structTranslator.h  test.c  test.pingas  vMem.c  vMem.h  vProc.c  vProc.h  vTerminal.c  vTerminal.h  vat2.c  vat2.h
test/: test.cc
test/aop/: 0.aop  1.aop  2.aop  3.aop  4.aop  5.aop  6.aop  7.aop  add.aop  addSymbol.aop  and.aop  andSymbol.aop  callRet.aop  comment.aop  div.aop  divSymbol.aop  draw.aop  if_eq.aop  if_lt.aop  if_neq.aop  label.aop  leftShift.aop  leftShiftSymbol.aop  modSymbol.aop  mov.aop  mul.aop  mulSymbol.aop  not.aop  notSymbol.aop  ob1.aop  rightShift.aop  sub.aop  subSymbol.aop  test.aop  variable.aop  xor.aop  xorSymbol.aop
test/aop/testFalse/: mov.aop
test/aop/testTrue/: add.aop  goto.aop  if_gt.aop  if_gte.aop  if_lt.aop  if_lte.aop  mod.aop  mov.aop  ngr.aop  or.aop  orSymbol.aop  pushPop.aop  rightShiftSymbol.aop  test.aop
